<resources>
    <string name="app_name">Enjezni app controller</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="resetpassword">Forgot password....</string>
    <string name="send_pass_to_email">Send password to email</string>
    <string name="email">Email</string>
    <string name="content_description_add_image">Click to add image</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="home">Home</string>
    <string name="send_sms">Send SMS</string>
    <string name="call">Call</string>
    <string name="remove_contact">Remove all details</string>
    <string name="name">Name</string>
    <string name="personal_page">Personal page</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="Logout">Log Out</string>
    <string name="share">Share</string>
    <string name="signing_in">Signing in.......</string>
    <string name="creating_new">Creating a new account......</string>
    <string name="logging_in">Signing in .............</string>
    <string name="loading_user_data">Loading user data......</string>
    <string name="updating_data">Updating user data......</string>
    <string name="updating_password">Updating password ....</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enable_permission">Please Enable the Read Storage permission in permission</string>
    <string name="read_storage_permission">Read Storage Permission required for this app</string>
    <string name="restaurant">Restaurant</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="default_notification_channel_id">default</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="libraries">libraries</string>
    <string name="architectural_tools">Architectural tools</string>
    <string name="other">Meat ,Fish ,Vegetables..etc</string>
    <string name="call_with_whatsapp">Call with whatsApp</string>
    <string name="type_order">Type your order</string>
    <string name="add_your_order">Add your order</string>
    <string name="direct_call">Direct call</string>
    <string name="edit">Edit</string>
    <string name="nav_header_desc">here is your photo</string>
    <string name="nav_header_title">title</string>
    <string name="nav_header_subtitle">subtitle</string>
    <string name="code">Code from e-mail</string>
    <string name="update_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email_error">Please enter a valid e-mail address</string>
    <string name="password_error">Password must contain at least 8 characters</string>
    <string name="name_error">Username must contain at least 6 characters</string>
    <string name="phone_error">The phone number must consist of 10 digits</string>
    <string name="confirm_password_error">The password is not the same</string>
    <string name="name_error_char"><![CDATA[Make sure your UserName not contains this characters  ($&+,:;=\\\\?@#|/\'<>.^*()%!-])]]></string>
    <string name="img_arrow_conten_description">Click here to hide the display buttons or click to show them again</string>
    <string name="img_arrow_down_conten_description">Click here to return the order display buttons again</string>
    <string name="img_orders_views_conten_description">This list of buttons to reserve a new order</string>
    <string name="img_arrow_up_conten_description">Click here to hide the order display buttons</string>
    <string name="img_call_conten_conten_description">Call directly to reserve a new order</string>
    <string name="img_whatsapp_conten_description">to reserve a new order by whatsapp app</string>
    <string name="img_prf_phone_conten_description">Here is the phone number you entered earlier while registering a new member</string>
    <string name="img_prf_email_conten_description">Here is your e-mail that you entered earlier while registering a new member</string>
    <string name="img_prf_location_conten_description">Here is where you are currently located. You can cancel this by setting the phone as you do not like it (:</string>
    <string name="edit_profile">Edit personal information</string>
    <string name="conf_dialog">OK</string>
    <string name="cancel_dialog">@android:string/cancel</string>
    <string name="txt_conf_password">Enter your password</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="img_update_prf_content_description">Add the image you want if you want to update the old image</string>
    <string name="notification_sub_text">Tap to see details of this order</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="rstaurants">Restaurants</string>
    <string name="category">Category</string>
    <string name="all_orders">All orders</string>
    <string name="last_orders">Last orders</string>
    <string name="add_new">Add new</string>
    <string name="add_ar_res">Arabic name of restaurant</string>
    <string name="add_en_res">English name of restaurant</string>
    <string name="add_rest_img">Add an image of the restaurant</string>
    <string name="add_ctg_img">Add a new category</string>
    <string name="delete">Delete</string>
    <string name="click_delete">Click to delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="click_edit_image">Click on image to choose new one or still use this image</string>
    <string name="click_add_image">Click the camera icon to add a new photo</string>
    <string name="sellected_image">This image will be sent to the database</string>
    <string name="click_img_icon_contentdescription">Click on this icon to bring new images from your device</string>
    <string name="click_add_category_content_description">Click here to go to the new screen by adding a new category</string>
    <string name="click_add_restaurant_content_description">Click here to go to the special screen by adding a new restaurant</string>

</resources>
