<?xml version="1.0" encoding="utf-8"?><!--suppress AndroidDomInspection -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/conf_dialog_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center|bottom"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:text="@string/txt_conf_password" />

    <EditText
        android:id="@+id/etxt_get_pass"
        android:layout_width="match_parent"
        android:background="@drawable/bg_rectangle_edittext"
        android:layout_margin="@dimen/conf_dialog_text_margin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="@dimen/conf_dialog_etext_content_size"
        android:layout_height="@dimen/conf_dialog_etext_content_height" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_cancel"
            android:layout_width="@dimen/conf_dialog_text_width"
            android:layout_height="wrap_content"
            android:background="@drawable/conf_dialog_txt_back"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/conf_dialog_text_padding"
            android:text="@string/cancel_dialog"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/conf_dialog_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_add"
            android:layout_width="@dimen/conf_dialog_text_width"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:background="@drawable/conf_dialog_txt_back"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/conf_dialog_text_padding"
            android:text="@string/conf_dialog"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/conf_dialog_text_size"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>