<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rv_container_register"
    android:background="@drawable/background_gradient"
    tools:context=".ui.log_in.RegisterActivity">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/imgHolder"
        android:layout_width="@dimen/rg_circleimageview_width"
        android:layout_height="@dimen/rg_circleimageview_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/rg_circleimageview_side_margin"
        android:layout_marginLeft="@dimen/rg_circleimageview_side_margin"
        android:layout_marginRight="@dimen/rg_circleimageview_side_margin"
        android:layout_marginTop="@dimen/rg_circleimageview_side_margin"
        android:visibility="gone"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="@dimen/rg_container_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/rg_container_side_margin"
        android:layout_marginRight="@dimen/rg_container_side_margin"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/addImage"
            android:layout_width="@dimen/rg_img_width"
            android:layout_height="@dimen/rg_img_height"
            android:background="@drawable/ic_camera"
            android:contentDescription="@string/content_description_add_image" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/rg_txt_input_bottom_margin">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rectangle_edittext"
                android:drawableRight="@drawable/ic_face"
                android:inputType="textPersonName"
                android:padding="@dimen/rg_edit_txt_padding"
                android:hint="@string/user_name"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/ic_face" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/rg_txt_input_bottom_margin">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/rg_edit_txt_top_margin"
                android:background="@drawable/bg_rectangle_edittext"
                android:drawableRight="@drawable/ic_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/rg_edit_txt_padding"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/ic_email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/rg_txt_input_bottom_margin">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/rg_edit_txt_top_margin"
                android:background="@drawable/bg_rectangle_edittext"
                android:drawableRight="@drawable/ic_key"
                android:gravity="start"
                android:inputType="textPassword"
                android:padding="@dimen/rg_edit_txt_padding"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/ic_key" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/rg_txt_input_bottom_margin">

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/rg_edit_txt_top_margin"
                android:background="@drawable/bg_rectangle_edittext"
                android:drawableRight="@drawable/ic_phone"
                android:inputType="phone"
                android:padding="@dimen/rg_edit_txt_padding"
                android:hint="@string/phone"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/ic_phone" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/rg_btn_top_margin"
            android:background="@drawable/bg_rectangle_button"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/rg_progressbar"
            style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/rg_progresspar_margin"
            android:layout_marginRight="@dimen/rg_progresspar_margin"
            android:visibility="gone" />
    </LinearLayout>
</RelativeLayout>