<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/ln"
    android:background="@drawable/background_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.log_in.resetPassword.ResetPasswordActivity">

    <TextView
        android:id="@+id/txt_title"
        android:text="@string/app_name"
        android:textSize="@dimen/reset_txt_title_size"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_below="@+id/txt_title"
        android:layout_centerInParent="true"
        android:layout_width="@dimen/reset_container_width"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_input"
            android:layout_marginTop="@dimen/reset_txt_input_top_margin"
            android:layout_marginBottom="@dimen/reset_txt_input_bottom_margin"
            android:layout_marginLeft="@dimen/reset_txt_input_side_margin"
            android:layout_gravity="bottom"
            android:layout_marginRight="@dimen/reset_txt_input_side_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/code"
                android:background="@drawable/bg_rectangle_edittext"
                android:padding="@dimen/reset_edit_txt_padding"
                android:id="@+id/et_code"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_input1"
            android:layout_marginTop="@dimen/reset_txt_input_top_margin"
            android:layout_marginBottom="@dimen/reset_txt_input_bottom_margin"
            android:layout_marginLeft="@dimen/reset_txt_input_side_margin"
            android:layout_gravity="bottom"
            android:layout_marginRight="@dimen/reset_txt_input_side_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/update_password"
                android:background="@drawable/bg_rectangle_edittext"
                android:padding="@dimen/reset_edit_txt_padding"
                android:id="@+id/et_update_password"
                android:drawableRight="@drawable/ic_key"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_key" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_input2"
            android:layout_marginTop="@dimen/reset_txt_input_top_margin"
            android:layout_marginBottom="@dimen/reset_txt_input_bottom_margin"
            android:layout_marginLeft="@dimen/reset_txt_input_side_margin"
            android:layout_gravity="bottom"
            android:layout_marginRight="@dimen/reset_txt_input_side_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/confirm_password"
                android:background="@drawable/bg_rectangle_edittext"
                android:padding="@dimen/reset_edit_txt_padding"
                android:id="@+id/et_confirm_password"
                android:drawableRight="@drawable/ic_key"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_key" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_update_password"
            android:layout_marginTop="@dimen/reset_btn_top_margin"
            android:layout_marginBottom="@dimen/reset_btn_bottom_margin"
            android:layout_marginLeft="@dimen/reset_btn_side_margin"
            android:layout_marginRight="@dimen/reset_btn_side_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/send_pass_to_email"
            android:textAllCaps="false"
            android:background="@drawable/bg_rectangle_button" />
    </LinearLayout>

    <ProgressBar
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:id="@+id/progress_reset"
        android:visibility="invisible"
        android:layout_below="@+id/lin1"
        android:layout_marginTop="@dimen/reset_prgrsbar_top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true" />

</RelativeLayout>